@@ -25,23 +25,12 @@
  - Chunky.take_sequences/1 or Chunky.chunk_runs/1 (day04.ex)
   - `Chunky.chunk_runs/1` - Chunk an enumerable by runs of duplicate values
  - TODO: nPr
-
-
-
- - Tests
-  - add a000041 to tests
-  - add a000593 to tests
   
  - Additions
   - Sequence.drop(seq, quant)
   - Sequence.at(seq, idx)
   - add Math.partition(int) for [0, 250] - use sequence a000041
- 
- - Modifications
-  - offset label for sequences (shift the starting index)
-   - change A000593
-   - add in tests
-   
+    
  - Large Numbers
   - mod_pow fails on large enough numbers
 
